# dgh_franka

./: .gitignore  MANIFEST.in  README.md  setup.cfg
dgh_franka/: __init__.py  core.py  heads.py  ipc_trigger_t.py
examples/: simple_pid.ipynb
