[metadata]
name = dgh_franka
version = 1.0.0
description = Dynamic Graph Head for dgm_franka
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BolunDai0216/dgh_franka
author = Bolun Dai
author_email = bd1555@nyu.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True
install_requires =
    numpy>=1.22.3
    pyzmq>=25.0.0
    pyyaml>=6.0
